--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,10 @@ body{
 
 /*Gallery*/
 
+.Gallery{
+  margin-top: 20px;
+}
+
 .Track{
   display: inline-block;
   width: 220px;
@@ -56,13 +60,51 @@ body{
 }
 
 .Track-image{
-  width: inherit;
-  height: inherit;
+  width: 220px;
+  height: 220px;
   border: 3px solid #fff;
   border-radius: 2px;
   position:absolute;
   object-fit: cover;
 }
+
+.Track-icon{
+  width: 220px;
+  height: 220px;
+  position: absolute;
+}
+
+.Track-icon-inner{
+  position: absolute;
+  text-align: center;
+  height: 60px;
+  width: 60px;
+  border-radius: 30px;
+  color: #fff;
+  background-color: #000;
+  font-size:30px;
+  margin-left: 80px;
+  margin-top:80px;
+  padding-top: 7px;
+  padding-left: 3px;
+  opacity: 0;
+}
+
+.Track-icon-inner:hover{
+  opacity: 0.8;
+  animation-name:fade-in;
+  animation-duration: 0.4s;
+}
+
+@keyframes fade-in {
+  from{
+    opacity:0;
+  }
+  to{
+    opacity:0.8;
+  }
+}
+
 
 .Track-text{
   background-color: #000;
